Fix game menu positioning on mobile

--- a/memphis.css
+++ b/memphis.css
@@ -165,6 +165,10 @@ p { margin-bottom:15px; }
 @media (max-width:480px) {
   .menubar .menu-container:nth-last-child(-n + 3) .menu {
     left: auto;
+    right: -100%;
+  }
+  .menubar .menu-container:nth-last-child(-n + 2) .menu {
+    left: auto;
     right: 0;
   }
 }
